@@ -1222,8 +1222,12 @@ int process_object(object *op) {
   if(QUERY_FLAG(op, FLAG_MONSTER))
     if(move_monster(op) || QUERY_FLAG(op, FLAG_FREED)) 
       return 1;
+
   if(QUERY_FLAG(op, FLAG_ANIMATE) && op->anim_speed==0) {
-    animate_object(op, op->direction);
+    if (op->type == PLAYER)
+	animate_object(op, op->facing);
+    else
+	animate_object(op, op->direction);
     if (QUERY_FLAG(op, FLAG_SEE_ANYWHERE))
       make_sure_seen(op);
   }
